--- a/fancy-star-diamonds/package.json
+++ b/fancy-star-diamonds/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-chrono": "^2.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
